#11200 - [ 권한 ] 권한 등록 및 수정 화면에서 엘리먼트 내부 스크롤에 위치가 상이하다.
1. 분석 및 확인 사항
  * querySelector 와 querySelectorAll의 차이점(querySelector 는 문서 내 첫번째 엘리먼트만 반환, All은 검색 결과 나오는 모든 엘리먼트를 배열에 담아 반환한다는 것을 알았음)
  * querySelectorAll('.z-checkbox-list> .os-scrollbar-vertical') 에서 '>'가 비교연산자가 아닌 하위 요소를 반환하는 태그인지 확인
  * OverlayScrollbars(document.querySelector(),{}); 형식이 OverlayScrollbar를 초기화 시키는 형식 임을 확인
  * 콜백처리 함수가 없어도 되는이유: querySelectAll()으로 불러온 배열 각각안에 클래스를 추가함('right','padding') 각각 오른쪽에 패딩을 추가하는 것을 확인(아마 이것 때문에 스크롤바가 위치가 상이하게 보인 것으로 생각한다.)

2. 처리사항
  * 콜백함수 부분 전체 삭제
  * 161번 라인 부터 중복인 OverlayScrollbars부분 삭제(page-content부분의 스크롤바는 하나만 있으면 되고, 내부 스크롤바는 querySelectorAll으로 배열로 추가 함으로 필요 없는 부분이라 생각하고 삭제 하였다.)

--- a/src/main/resources/public/template/auth/authEdit.html
+++ b/src/main/resources/public/template/auth/authEdit.html
@@ -99,15 +99,7 @@
     window.onload = function() {
         OverlayScrollbars(document.querySelector('.z-page-content'), {className: 'scrollbar'});
         OverlayScrollbars(document.querySelectorAll('.z-checkbox-list'), {
-            className: 'inner-scrollbar',
-            callbacks: {
-                onInitialized: function () {
-                    const verticalScrollTrack = document.querySelectorAll('.z-checkbox-list');
-                    for (let i = 0; i < verticalScrollTrack.length; i++) {
-                        verticalScrollTrack.item(i).classList.add('right', 'padding');
-                    }
-                }
-            }
+            className: 'inner-scrollbar'
         });
 
         if (document.getElementById('txtAuthId').value) {
@@ -157,18 +149,6 @@
                         document.getElementById('roleAuthMapCount').value = i18n.msg('auth.label.count', responseJson.roleAuthMapCount);
                     }
                     disabledButton(responseJson.roleAuthMapCount);
-                    OverlayScrollbars(document.querySelector('.z-auth-content-edit'), {className: 'scrollbar'});
-                    OverlayScrollbars(document.querySelectorAll('.z-checkbox-list'), {
-                        className: 'inner-scrollbar',
-                        callbacks: {
-                            onInitialized: function () {
-                                const verticalScrollTrack = document.querySelectorAll('.z-checkbox-list> .os-scrollbar-vertical');
-                                for (let i = 0; i < verticalScrollTrack.length; i++) {
-                                    verticalScrollTrack.item(i).classList.add('right', 'padding');
-                                }
-                            }
-                        }
-                    });
                 },
             };
             aliceJs.sendXhr(opt);
