#11245 1. 포탈의 다운로드 리스트 화면에서 달력 검색 오류 수정

--- a/src/main/resources/public/template/portal/download/downloadSearch.html
+++ b/src/main/resources/public/template/portal/download/downloadSearch.html
@@ -65,7 +65,7 @@
                         picker.open();
                     });
                 } else {
-                    getList(false);
+                    getList();
                 }
             } else {
                 const fromDtValue = document.getElementById('fromDt').value;
@@ -75,7 +75,7 @@
                         picker.open();
                     });
                 } else {
-                    getList(false);
+                    getList();
                 }
             }
         }
