--- a/src/main/resources/public/template/numbering-pattern/numberingPatternView.html
+++ b/src/main/resources/public/template/numbering-pattern/numberingPatternView.html
@@ -19,17 +19,17 @@
     <div class="z-view-row flex-column">
         <label th:text="#{pattern.label.type}"></label>
         <div class="flex-row mr-auto">
-            <label class="z-radio mr-4">
+            <label class="z-radio">
                 <input id="numbering.pattern.text" name="patternType" type="radio"
                        th:checked="${pattern?.patternType == 'numbering.pattern.text'}" disabled>
                 <span></span>
-                <span class="z-label" th:text="#{pattern.type.text}"></span>
+                <span class="z-label mr-4" th:text="#{pattern.type.text}"></span>
             </label>
-            <label class="z-radio mr-4">
+            <label class="z-radio">
                 <input id="numbering.pattern.date" name="patternType" type="radio"
                        th:checked="${pattern?.patternType == 'numbering.pattern.date'}" disabled>
                 <span></span>
-                <span class="z-label" th:text="#{pattern.type.date}"></span>
+                <span class="z-label mr-4" th:text="#{pattern.type.date}"></span>
             </label>
             <label class="z-radio">
                 <input id="numbering.pattern.sequence" name="patternType" type="radio"
