--- a/src/main/resources/public/template/report/reportTemplateEdit.html
+++ b/src/main/resources/public/template/report/reportTemplateEdit.html
@@ -6,6 +6,9 @@
 <head>
     <title th:text="${template != null} ? #{report.label.templateEdit} : #{report.label.templateRegister}"></title>
 </head>
+<th:block layout:fragment="pageHead">
+    <script th:src="@{/assets/js/workflow/zWorkflowUtil.js}"></script>
+</th:block>
 <body>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{report.label.template}"></h1>
@@ -82,187 +85,183 @@
                         onclick="actionTemplate('delete')" th:text="#{common.btn.delete}"></button>
             </div>
         </div>
-
-
     </div>
 </div>
 </body>
-<th:block layout:fragment="pageScript">
-    <script th:src="@{/assets/js/workflow/zWorkflowUtil.js}"></script>
-    <script type="text/javascript" th:inline="javascript">
-        /*<![CDATA[*/
-        const STATUS_SUCCESS = '0';
-        const STATUS_ERROR_TEMPLATE_NAME_DUPLICATION = '1';
-        const chartList = /*[[${chartList}]]*/ null;
-        const data = /*[[${template}]]*/ null;
-        window.onload = function () {
-            if (data !== null) {
-                data["charts"].forEach((item) => {
-                    addChart(item);
-                })
-            }
-
-            OverlayScrollbars(document.querySelectorAll('.edit'), {className: 'scrollbar'});
-            OverlayScrollbars(document.querySelectorAll('.textarea-scroll-wrapper'), {
-                className: 'scrollbar',
-                resize: 'vertical',
-                sizeAutoCapable: true,
-                textarea: {
-                    dynHeight: false,
-                    dynWidth: false,
-                    inheritedAttrs: "class"
-                }
-            });
-        };
-
-        // Chart 추가
-        function addChart(data) {
-            let target = document.querySelector('#chartList');
-            let property = {};
-            if (typeof data !== 'undefined' && data !== null) {
-                property = data;
-            }
-            if (chartList != null) {
-                const options = chartList.map(function (option) {
-                    return `<option value="${option.chartId}" ${property.chartId === option.chartId ? 'selected=\'true\'' : ''}>${aliceJs.filterXSS(option.chartName)}</option>`;
-                }).join('');
-                let rowId = ZWorkflowUtil.generateUUID();
-                let rowElement =
-                    `<div class="flex-row mt-2">` +
-                    `<div class="flex-column col-11"><select name="chart" id="${rowId}_chart">${options}</select></div>` +
-                    `<div class="flex-column col-1"><button id="${rowId}_delete" type="button" class="z-button-icon extra"><span class="z-icon i-delete"></span></button></div>` +
-                    `</div>`;
-                target.insertAdjacentHTML('beforeend', rowElement);
-
-                const deleteBtn = document.getElementById(rowId + '_delete');
-                deleteBtn.addEventListener('click', function (e) {
-                    e.stopPropagation();
-                    this.parentElement.parentElement.remove();
-                });
-                aliceJs.initDesignedSelectTag();
-            }
+<script layout:fragment="pageScript" th:inline="javascript">
+    /*<![CDATA[*/
+    const STATUS_SUCCESS = '0';
+    const STATUS_ERROR_TEMPLATE_NAME_DUPLICATION = '1';
+    const chartList = /*[[${chartList}]]*/ null;
+    const data = /*[[${template}]]*/ null;
+    window.onload = function () {
+        if (data !== null) {
+            data["charts"].forEach((item) => {
+                addChart(item);
+            })
         }
 
-        // 유효성 검사(중복 차트 체크)
-        function isValid() {
-            let isValid = true;
-            let chartElement = document.querySelector('#chartList');
-            let charts = [];
-            chartElement.querySelectorAll('select[name=chart]').forEach((item) => {
-                if (charts.includes(item.value)) {
-                    aliceAlert.alertWarning(i18n.msg('report.msg.duplicateChart'));
-                    isValid = false;
-                }
-                if (item.value !== '') {
-                    charts.push(item.value);
-                }
+        OverlayScrollbars(document.querySelectorAll('.edit'), {className: 'scrollbar'});
+        OverlayScrollbars(document.querySelectorAll('.textarea-scroll-wrapper'), {
+            className: 'scrollbar',
+            resize: 'vertical',
+            sizeAutoCapable: true,
+            textarea: {
+                dynHeight: false,
+                dynWidth: false,
+                inheritedAttrs: "class"
+            }
+        });
+    };
+
+    // Chart 추가
+    function addChart(data) {
+        let target = document.querySelector('#chartList');
+        let property = {};
+        if (typeof data !== 'undefined' && data !== null) {
+            property = data;
+        }
+        if (chartList != null) {
+            const options = chartList.map(function (option) {
+                return `<option value="${option.chartId}" ${property.chartId === option.chartId ? 'selected=\'true\'' : ''}>${aliceJs.filterXSS(option.chartName)}</option>`;
+            }).join('');
+            let rowId = ZWorkflowUtil.generateUUID();
+            let rowElement =
+                `<div class="flex-row mt-2">` +
+                `<div class="flex-column col-11"><select name="chart" id="${rowId}_chart">${options}</select></div>` +
+                `<div class="flex-column col-1"><button id="${rowId}_delete" type="button" class="z-button-icon extra"><span class="z-icon i-delete"></span></button></div>` +
+                `</div>`;
+            target.insertAdjacentHTML('beforeend', rowElement);
+
+            const deleteBtn = document.getElementById(rowId + '_delete');
+            deleteBtn.addEventListener('click', function (e) {
+                e.stopPropagation();
+                this.parentElement.parentElement.remove();
             });
-            if (isValid && charts.length === 0) {
-                aliceAlert.alertWarning(i18n.msg('report.msg.emptyChart'));
+            aliceJs.initDesignedSelectTag();
+        }
+    }
+
+    // 유효성 검사(중복 차트 체크)
+    function isValid() {
+        let isValid = true;
+        let chartElement = document.querySelector('#chartList');
+        let charts = [];
+        chartElement.querySelectorAll('select[name=chart]').forEach((item) => {
+            if (charts.includes(item.value)) {
+                aliceAlert.alertWarning(i18n.msg('report.msg.duplicateChart'));
                 isValid = false;
             }
-            return isValid;
-        }
-
-        // Action
-        function actionTemplate(method) {
-            if (method === 'post' || method === 'put') {
-                if (isValidRequiredAll() && isValid()) {
-                    let data = {
-                        templateId: '',
-                        templateName: document.getElementById('templateName').value,
-                        templateDesc: document.getElementById('templateDesc').value,
-                        reportName: document.getElementById('reportName').value,
-                        automatic: document.getElementById('automatic').checked
-                    }
-                    let url = '/rest/reports/template';
-                    if (method === 'put') {
-                        url += '/' + /*[[${template?.templateId}]]*/'';
-                        data.templateId = /*[[${template?.templateId}]]*/'';
-                    }
-                    let charts = [];
-                    let chartElement = document.getElementById('chartList');
-                    chartElement.querySelectorAll('select[name=chart]').forEach((item, index) => {
-                        let chart = {
-                            id: item.value,
-                            order: index + 1
-                        }
-                        charts.push(chart);
-                    });
-                    data.charts = charts
-                    restSubmit(method, url, data);
-                }
-            } else if (method === 'delete') {
-                aliceAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/reports/template/' + /*[[${template?.templateId}]]*/'');
+            if (item.value !== '') {
+                charts.push(item.value);
             }
+        });
+        if (isValid && charts.length === 0) {
+            aliceAlert.alertWarning(i18n.msg('report.msg.emptyChart'));
+            isValid = false;
         }
+        return isValid;
+    }
 
-        // Ajax 통신
-        function restSubmit(method, url, data) {
-            const opt = {
-                method: method,
-                url: url,
-                params: JSON.stringify(data),
-                contentType: 'application/json',
-                callbackFunc: function (response) {
-                    let result = JSON.parse(response.responseText);
-                    if (method === 'post' || method === 'put') {
-                        switch (result.code) {
-                            case STATUS_SUCCESS:
-                                aliceAlert.alertSuccess(i18n.msg('common.msg.save'), function () {
-                                    location.href = '/reports/template/search';
-                                });
-                                break;
-                            case STATUS_ERROR_TEMPLATE_NAME_DUPLICATION:
-                                aliceAlert.alertSuccess(i18n.msg('report.msg.templateNameUsed'));
-                                break;
-                            default :
-                                aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
-                                break;
-                        }
-                    } else if (method === 'delete') {
-                        switch (result.code) {
-                            case STATUS_SUCCESS:
-                                aliceAlert.alertSuccess(i18n.msg('common.msg.delete'), function () {
-                                    location.href = '/reports/template/search';
-                                });
-                                break;
-                            default:
-                                aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
-                                break;
-                        }
+    // Action
+    function actionTemplate(method) {
+        if (method === 'post' || method === 'put') {
+            if (isValidRequiredAll() && isValid()) {
+                let data = {
+                    templateId: '',
+                    templateName: document.getElementById('templateName').value,
+                    templateDesc: document.getElementById('templateDesc').value,
+                    reportName: document.getElementById('reportName').value,
+                    automatic: document.getElementById('automatic').checked
+                }
+                let url = '/rest/reports/template';
+                if (method === 'put') {
+                    url += '/' + /*[[${template?.templateId}]]*/'';
+                    data.templateId = /*[[${template?.templateId}]]*/'';
+                }
+                let charts = [];
+                let chartElement = document.getElementById('chartList');
+                chartElement.querySelectorAll('select[name=chart]').forEach((item, index) => {
+                    let chart = {
+                        id: item.value,
+                        order: index + 1
+                    }
+                    charts.push(chart);
+                });
+                data.charts = charts
+                restSubmit(method, url, data);
+            }
+        } else if (method === 'delete') {
+            aliceAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/reports/template/' + /*[[${template?.templateId}]]*/'');
+        }
+    }
+
+    // Ajax 통신
+    function restSubmit(method, url, data) {
+        const opt = {
+            method: method,
+            url: url,
+            params: JSON.stringify(data),
+            contentType: 'application/json',
+            callbackFunc: function (response) {
+                let result = JSON.parse(response.responseText);
+                if (method === 'post' || method === 'put') {
+                    switch (result.code) {
+                        case STATUS_SUCCESS:
+                            aliceAlert.alertSuccess(i18n.msg('common.msg.save'), function () {
+                                location.href = '/reports/template/search';
+                            });
+                            break;
+                        case STATUS_ERROR_TEMPLATE_NAME_DUPLICATION:
+                            aliceAlert.alertSuccess(i18n.msg('report.msg.templateNameUsed'));
+                            break;
+                        default :
+                            aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
+                            break;
+                    }
+                } else if (method === 'delete') {
+                    switch (result.code) {
+                        case STATUS_SUCCESS:
+                            aliceAlert.alertSuccess(i18n.msg('common.msg.delete'), function () {
+                                location.href = '/reports/template/search';
+                            });
+                            break;
+                        default:
+                            aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
+                            break;
                     }
                 }
-            };
-            aliceJs.sendXhr(opt);
-        }
-
-        // 미리보기
-        // sessionStorage 에 화면 데이터 저장
-        function preview() {
-            const chartElement = document.querySelector('#chartList');
-            const charts = [];
-            chartElement.querySelectorAll('select[name=chart]').forEach((item) => {
-                if (item.value !== '') {
-                    charts.push({chartId: item.value});
-                }
-            });
-
-            // 보고서 명이 존재하면 보고서명을 출력하고, 없으면 템플릿명을 출력한다.
-            const reportNameTemp = isEmpty('reportName') ? document.getElementById('templateName').value :
-                document.getElementById('reportName').value;
-
-            const reportData = {
-                reportId: '',
-                reportName: reportNameTemp,
-                reportDesc: document.querySelector('#templateDesc').value,
-                charts: charts
             }
-            sessionStorage.setItem("alice_report", JSON.stringify(reportData));
-            window.open('/reports/template/preview', '_blank');
-        }
+        };
+        aliceJs.sendXhr(opt);
+    }
 
-        /*]]>*/
-    </script>
+    // 미리보기
+    // sessionStorage 에 화면 데이터 저장
+    function preview() {
+        const chartElement = document.querySelector('#chartList');
+        const charts = [];
+        chartElement.querySelectorAll('select[name=chart]').forEach((item) => {
+            if (item.value !== '') {
+                charts.push({chartId: item.value});
+            }
+        });
+
+        // 보고서 명이 존재하면 보고서명을 출력하고, 없으면 템플릿명을 출력한다.
+        const reportNameTemp = isEmpty('reportName') ? document.getElementById('templateName').value :
+            document.getElementById('reportName').value;
+
+        const reportData = {
+            reportId: '',
+            reportName: reportNameTemp,
+            reportDesc: document.querySelector('#templateDesc').value,
+            charts: charts
+        }
+        sessionStorage.setItem("alice_report", JSON.stringify(reportData));
+        window.open('/reports/template/preview', '_blank');
+    }
+
+    /*]]>*/
+</script>
 </th:block>
 </html>
