--- a/src/main/resources/public/template/user/userEdit.html
+++ b/src/main/resources/public/template/user/userEdit.html
@@ -99,7 +99,7 @@
                         <span th:text="#{user.label.timezone}"></span>
                         <span class="required"></span>
                     </label>
-                    <select class="custom-setting-top-select" name="timezone" id="timezone">
+                    <select name="timezone" id="timezone">
                         <option th:each="timezone: ${timezoneList}" th:value="${timezone.timezoneValue}"
                                 th:text="${timezone.timezoneId}" th:selected="${timezone.timezoneValue} == ${users?.timezone?:defaultTimezone}"></option>
                     </select>
@@ -126,7 +126,7 @@
                         <span th:text="#{user.label.lang}"></span>
                         <span class="required"></span>
                     </label>
-                    <select class="language-select" name="lang" id="lang">
+                    <select name="lang" id="lang">
                         <option th:each="lang: ${langList}" th:value="${lang.codeValue}"
                                 th:text="${lang.codeValue}" th:selected="${lang.codeValue} == ${users?.lang}"></option>
                     </select>
@@ -136,7 +136,7 @@
                         <span th:text="#{user.label.theme}"></span>
                         <span class="required"></span>
                     </label>
-                    <select class="theme-color-select" name="theme" id="theme">
+                    <select name="theme" id="theme">
                         <option th:each="theme: ${themeList}" th:value="${theme.codeValue}"
                                 th:text="${theme.codeValue}" th:selected="${theme.codeValue} == ${users?.theme}"
                                 th:unless="${theme.codeValue} == 'dark'"></option>
